# cryptor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  mk
.github/workflows/: cmake-single-platform.yml
docker/: .gitignore  Dockerfile  Dockerfile.slim  attach-asroot.sh  build.sh  copy.sh  get-page.sh  run.sh  shutdown.sh
docker/home/cryptor/: .bashrc  .gitignore_global  .motd  post-install.sh
html/: help.html  index.html  license.html  secret-template.html  terms-of-use.html  values.js  version.js
include/: cli.hpp  logging.hpp  service.hpp  testlib.hpp  unit.hpp  version.hpp
include/cryptor/: cli.hpp  service.hpp  unit.hpp  version.hpp
prompts/: cmake.txt  combine-object.txt  compile-5.txt  docker-compile.txt  fix-unit-compile.txt  integration-test-response.txt  integration-test.txt  objects.txt  standalone-response.txt  standalone.txt  string-func-map-response.txt  string-func-map.txt
server/: .gitignore  Makefile  README.md  cli.hpp  cryptor  cryptor.cpp  logging.hpp  service.hpp  testlib.hpp  unit  unit.cpp  version.hpp
server/src/: Makefile
src/: Makefile  README.md  cli.cpp  cryptor.cpp  integration.cpp  logging.cpp  service.cpp  unit.cpp
